Refractored all my code, MVP somewhat done, have to fix grid cutoff and working on grid layout change

--- a/conways-life/src/index.css
+++ b/conways-life/src/index.css
@@ -1,14 +1,116 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #61dafb;
+  letter-spacing: 1px;
+  font-size: 40px;
+  font-weight: bold;
+  font-variant: small-caps;
+  background: url(https://78.media.tumblr.com/ba237c32bec4018693e06b3bb443490e/tumblr_n70t6vfHv21r2geqjo1_500.gif?resize=320:*) no-repeat center center fixed;
+  background-size: cover;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+  
+.box {
+  display: inline-block;       
+  border: 1px solid black;
+  width: 15px;
+  height: 15px;
+  margin-left: -1px;
+  margin-bottom: -1px;
+  background: lightgray;
+  }
+
+.off {
+  background-color: lightgray;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.on {
+  background-color: red;
+}
+  
+.box:hover { 
+  background: #00CCFF;
+}
+
+.button-container {
+  border: 1px solid black;
+  margin: auto;
+  margin-right: 40px;
+  margin-left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.grid {
+  width: 150px;
+  line-height: 0;
+  margin: auto;
+  box-shadow: 0px 0px 20px white;
+  margin-top: 20px;
+}
+  
+h1, h2, h3, h4 {
+  color: white;
+  margin: auto;
+  text-align: center;
+  width: 50%;
+  margin-top: 10px;
+}
+
+h4 {
+  margin-top: 0px;
+}
+
+.button {
+  border: 1px solid rgb(177, 80, 63);
+  border-radius: 4px;
+  background: #ffffff;
+  color: #0dae8e;
+  font-size: 36px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  font-variant: normal;
+  cursor: pointer;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.button:hover {
+  background-color: #4CAF50;
+  color: white;
 }
